@@ -446,3 +446,4 @@
 - Added networks/staticedge.network
 - Fixed some host revealing nick collision stuff
 - Tokenized nick->nick PRIVMSG and NOTICE
+- Made it so you can remove a protoctl by putting a - in front
